tests/expectations/compiler/strings/string.out
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:5:9
     |
   5 |         let str:string = "a a a";
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^
